<resources>
    <string name="app_name">Mini Projet</string>
    <string name="restau_img_desc">restau img</string>
    <string name="restaurant_image">Restaurant main image</string>
    <string name="reserver">Réserver</string>
    <string name="avis">Avis</string>
    <string name="laisser_avis">Laisser un avis</string>
    <string name="prenom">Prénom</string>
    <string name="john">John</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="johnmail">john.doe@gmail.com</string>
    <string name="quel_jour">Quel jour ?</string>
    <string name="a_quelle_heure">À quelle heure ?</string>
    <string name="pour_combien_de_personnes">Pour combien de personnes ?</string>
    <string name="colon">:</string>
    <string name="open_maps">Ouvrir la carte</string>
    <string name="maps_title">Visualisation d\'images des revues</string>
    <string name="redigezavis">Rédigez votre avis</string>
    <string name="votrenom">Entrez votre nom</string>
    <string name="prendrephoto">Prendre une photo</string>
    <string name="valideravis">Valider l\'avis</string>
    <string name="close">Fermer\n</string>
    <string name="visit_restaurant">Voir le restaurant</string>
    <string name="no_review_with_text">Aucune revue avec image disponible.</string>
    <string name="supprimer">Supprimer</string>
    <string name="visualisation_de_l_image">Visualisation de l\'image</string>
    <string name="flouter">Flouter</string>
    <string name="assombrir">Assombrir</string>
    <string name="reinitialiser">Réinitialiser</string>
    <string name="enregistrer">Enregistrer</string>
</resources>