<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Date selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-30dp"
        android:text="@string/quel_jour"
        android:textSize="16sp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <!-- Time selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:text="@string/a_quelle_heure"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:text="@string/colon"
            android:textSize="18sp" />

        <NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <!-- Table size selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pour_combien_de_personnes"
        android:textSize="16sp" />

    <NumberPicker
        android:id="@+id/numberOfPeople"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:inputType="number" />

    <!-- Name selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints="@string/prenom"
        android:hint="@string/john"
        android:inputType="text" />

    <!-- email -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/adresse_mail"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:autofillHints="@string/adresse_mail"
        android:hint="@string/johnmail"
        android:inputType="textEmailAddress" />
</LinearLayout>
