<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/modal_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/visualisation_de_l_image"
        android:paddingBottom="16dp"
        android:scaleType="fitCenter" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/flouter_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/app_main"
            android:text="@string/flouter"
            android:textColor="@color/white"
            app:icon="@drawable/outline_blur_on_24"
            app:iconGravity="start"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/assombrir_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/app_main"
            android:text="@string/assombrir"
            android:textColor="@color/white"
            app:icon="@drawable/outline_dark_mode_24"
            app:iconGravity="start"
            app:iconTint="@color/white" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/supprimer_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/app_main"
            android:text="@string/supprimer"
            android:textColor="@color/white"
            app:icon="@drawable/baseline_delete_forever_24"
            app:iconGravity="start"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/reinitialiser_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/app_main"
            android:text="@string/reinitialiser"
            android:textColor="@color/white"
            app:icon="@drawable/outline_settings_backup_restore_24"
            app:iconGravity="start"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/enregistrer_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/app_main"
            android:text="@string/enregistrer"
            android:textColor="@color/white"
            app:icon="@drawable/outline_file_save_24"
            app:iconGravity="start"
            app:iconTint="@color/white" />

    </LinearLayout>

</LinearLayout>